docs: edit markdown

--- a/W2/M5/M5_idea/github_isses.ipynb
+++ b/W2/M5/M5_idea/github_isses.ipynb
@@ -8,9 +8,11 @@
     "Dataset: github_issues.csv from kaggle\n",
     "https://www.kaggle.com/datasets/davidshinn/github-issues/data\n",
     "\n",
-    "Download or\n",
-    "# Install dependencies as needed:\n",
-    "# pip install kagglehub[pandas-datasets]\n",
+    "Download or Follow the instructions below\n",
+    "\n",
+    "Install dependencies as needed:\n",
+    "```\n",
+    "pip install kagglehub[pandas-datasets]\n",
     "import kagglehub\n",
     "from kagglehub import KaggleDatasetAdapter\n",
     "\n",
@@ -28,7 +30,8 @@
     "  # https://github.com/Kaggle/kagglehub/blob/main/README.md#kaggledatasetadapterpandas\n",
     ")\n",
     "\n",
-    "print(\"First 5 records:\", df.head())"
+    "print(\"First 5 records:\", df.head())\n",
+    "```"
    ]
   },
   {
